[tool.poetry]
name = "bro-birthsday-bot"
version = "0.1.0"
description = ""
authors = ["OrangeCoderRU"]

[tool.poetry.dependencies]
python = "^3.10"
schedule = "^1.1.0"
psycopg2 = "^2.9.2"
pyTelegramBotAPI = "^4.2.0"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
